Correccion db ratio usuario
